fixed overlapping input-control error messages

--- a/static/watchOffice.css
+++ b/static/watchOffice.css
@@ -52,6 +52,6 @@ body {
 .input-control .error {
     color: #ff3860;
     font-size: 10;
-    margin: 2px;
-    height: 13px;
+/*    margin: 2px;
+    height: 13px;*/
 }
